plang/testing/logs/false-incorrect/41/program41.p.p
m1R (LM) xHg (hLG CZzB (m) (BwxG) TUWQ) FkV.


fAJ (Vhq9M) mH9g0 (Cd) (S) :- ((moN (Q) (ANK)), c (Grcq) G zWCd (qJ l00 (n Sv) SgcX), wz06a (hRM SD t7) (e6G n bfB), (dS a1D HagbX F); a15 bi0 Ysd eqnm, (hmYg8, ht (W5a) SR (QPK) (dHtB NNhl (IfAr) ZAQ68); (m0r))).
v NUq0Y :- vf; (bpd (c4Uo4 (TC2XT) cI cR)).

v (DHcOv) (Ud3B0) B (Cyx) :- f, pYD7 (ggzW3 (yBy (j (Aiw) (FI) (pxv Nb)) (jYz8 (q uVg (jhGa vhgdp (VxW3) gPw3Y OlR) emy (henA))) (fnc y (m y (FuEDC) (tv)) v7Ot kb) (M9Y))) B5 (xk3 (j) O) CkxkY, g c (eqJjL); (wEa nT (o m0) (hr) jB8Kr); jg (PRmc7), na; qB; xq Mb, (y uLl; dnRS rTms AuD hZ yJem), rKD IeZm (TCeo0) Cu Pwbt, w (d xmGJ (JZ6H) eR0tu (ASH)) (oG82 (l (iS5C7) (Do)) HAgE (irm wA) N); ecr (fF (k8m1 (OSPf)) (Dja) (E5) (S4nL)) QHT, eIMg (v (S7ww) Csf dkr (zYq (a6 (BBWui)))) (aL ZCv (VDT)), xk, (n (YRF9a), q (J5)).

dK (HbbFC) :- q Z (HRn) (n9 (Ts)) (kNmML (N) AQi jYirW).
i4wHv ZN (ya0ik (n LqcLC Bh (bSD2 mZp Hu2SJ (CJ0j) l)) (zV8b e07 vK2Aa (ha) xg2Ys) F0dc XC) (XOq) :- gF L9NV.
? sagd4 QH0 (yD (nzKeq v4C3R) k) f0A; sjMM Bq (QQza1); (i (ch0N (XO) (uxoR3) (L) (QRGNY)) a (HeV); jCYC CJ jOVd), mWg8J; cf0bk vabq (ZX) (PV), (wv; vqyA p cmjvT (P) Vb96; z6wy (GBD) (iD BON0 UEub); dq v4 C (O9Tz) (BSkl)).